QSF - Assets Dev Org/src/objects/Lunch__c.object
<CustomObject>
    <fields>
        <fullName>Appetizer__c</fullName>
        <description>Appetizer</description>
        <label>Appetizer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <label>Course</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>Lunch Date</description>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Desert__c</fullName>
        <label>Desert</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Menu_has_been_posted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Menu has been posted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Menu__c</fullName>
        <label>Special Menu</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Cooking the lunch menu</fullName>
                <color>#FF6600</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Lunch menu ready</fullName>
                <color>#009900</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Normal</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Special</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Lunch</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Status__c</columns>
        <columns>Appetizer__c</columns>
        <columns>Course__c</columns>
        <columns>Desert__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Today_s_Lunch</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Appetizer__c</columns>
        <columns>Course__c</columns>
        <columns>Desert__c</columns>
        <columns>Special_Menu__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>Today&apos;s Lunch</label>
    </listViews>
    <nameField>
        <displayFormat>L-{000000}</displayFormat>
        <label>Lunch ID.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lunches</pluralLabel>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <description>Default Lunch</description>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>Special</fullName>
        <active>true</active>
        <description>Special Lunch</description>
        <label>Special</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>